Fix: fix color in menu items on mobile

--- a/css/theme-a42.css
+++ b/css/theme-a42.css
@@ -5618,7 +5618,7 @@ figcaption code {
 
 #navbar li button,
 #navbar li button .icon:before {
-	color: inherit;
+	color: white;
 }
 
 /*.inv-c #navbar li button .icon:before{
